# ai-gateway

./: .env.example  .env.op  .envrc  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_DISPATCH.md  CLAUDE.md  Dockerfile.cliproxy  MODELS.md  Makefile  README.md  REPO_IMPROVEMENT_APPENDIX.md  REPO_IMPROVEMENT_WORKFLOW.md  RUNBOOK.md  SECRETS.md  TESTING_AND_PROMOTION_POLICY.md  WORKTREES.md  cliproxy-setup.sh  create_issues.py  dev-env.sh  docker-compose.cliproxy-build.yml  docker-compose.dev.yml  docker-compose.mock.yml  docker-compose.yml  gemini-model-map.json  gen-client-config.sh  init-db-bootstrap.sql  init-db.sql  litellm-config.yaml  pr_desc.txt  pyproject.toml  pytest.ini  setup-repo-env.sh  setup_litellm_teams.py  translator.py
.githooks/: pre-push  prevent-hardcoded-keys.sh  validate-yaml.sh
.github/: BRANCH_PROTECTION_POLICY.md  CODEOWNERS  pull_request_template.md
config/: model-registry.yaml  policy-profiles.yaml  workspace-rules.yaml
db/: apply-migrations.sh  seed-litellm-mock.sql
docs/: 1password-secrets.md  ADAPTIVE_ROUTING.md  ADMIN_CONSOLE.md  ADMIN_CONSOLE_DATA_CONTRACT.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CHARGEBACK_ATTRIBUTION.md  CICD_PHASE2_CD_K3S.md  CI_SELF_HOSTED.md  CLIENT_COMPATIBILITY.md  CONFIG_PROMOTION.md  CREDENTIAL_HEALTH.md  EVAL_DRIVEN_ROUTING.md  GO_PUBLIC.md  MCP_TOOL_VISIBILITY.md  MODEL_MANAGEMENT_RESEARCH.md  POLICY_ENGINE_AND_ROUTING_REFACTOR.md  ROADMAP.md  ROUTING_AND_FAILOVER_STRATEGY.md  SCRIPT_TO_SERVICE_ROADMAP.md  TENANCY.md  TESTING.md  TOKEN_USAGE_ANALYTICS.md  UNMERGED_FEATURES.md
(+257 files in other folders)
