[project]
name = "ai-gateway"
version = "0.1.0"
description = "Consumer LLM proxy via LiteLLM"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["translator"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
